--- a/index.html
+++ b/index.html
@@ -1,50 +1,25 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Accueil | Makeup</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>Accueil | Coffee</title>
+    <link rel="stylesheet" href="assets/css/styles2.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <h1>mkp<span>.</span></h1>
+            <h1>Coffee<span>.</span></h1>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#contact">Contact us</a></li>
+                <li><a class="index1" href="index.html">Home</a></li>
+                <li><a class="gallery" href="gallery.html">Gallery</a></li>
+                <li><a class="contact" href="contact.html">Contact us</a></li>
             </ul>
+            <button>Book a table</button>
         </nav>
     </header>
-
     <section class="main" >
-        <div>
-            <div class="circle circle-left">
-                <img src="./assets/images/bg-left.png" width="600" height="600" alt="">
-            </div>
-        </div>
-        <div class="main-content">
-            <div class="brackets">
-                <div class="brackets-content">
-                    <h1>MAKEUP</h1>
-                    <h1>WEBSITE</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, explicabo.</p>
-                    <button>Gallery</button>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="circle circle-right">
-                <img src="./assets/images/bg-right.png" style="transform: translate(-100px,-100px);" width="600" alt="">
-            </div>
-        </div>
+        <h1>The YouCode<br/> Coffee</h1>
     </section>
-
-    <footer>
-        <p>&copy; 2024 YOUCODE.</p>
-    </footer>
-
 </body>
 </html>
